class-rules.css
.clearfix::after {
	clear: both;
	content: '';
	display: block;
}

.shadow {
	box-shadow: 0 2px 10px var(--shadow-color, rgba(0,0,0,.2));
}

.shadow-dark {
	box-shadow: 0 2px 10px var(--shadow-dark-color, rgba(0,0,0,.6));
}

.icon, .icon * {
	color: inherit;
	max-width: 100%;
	max-height: 100%;
	width: var(--icon-size, 1em);
	height: var(--icon-size, 1em);
	vertical-align: bottom;
}

.round {
	border-radius: 50%;
}

.card {
	border: var(--card-border, 1px solid #ccc);
	border-radius: var(--card-radius, 2px);
	background: var(--card-bg, white);
	padding: 0.7em;
}

.hidden {
	visibility: hidden;
}

.width-viewport {
	width: 100vw;
}

.height-viewport {
	height: 100vh;
}

.width-min-content {
	width: min-content;
}

.width-max-content {
	width: max-content;
}

.width-fit-content {
	width: fit-content;
}

.height-min-content {
	height: min-content;
}

.height-max-content {
	height: max-content;
}

.height-fit-content {
	height: fit-content;
}

/*============================= Color rules ========================*/

.current-color {
	fill: currentColor;
}

.color-default {
	color: var(--default-color);
}

.color-highlight {
	color: var(--highlight-color);
}

.color-primary {
	color: var(--primary-color);
}

.color-accent {
	color: var(--accent-color);
}

.color-compliment {
	color: var(--compliment-color);
}

.color-alt {
	color: var(--alt-color);
}

.color-initial {
	color: initial;
}

.color-inherit {
	color: inherit;
}

/*============================= Background rules ========================*/
.background-scroll {
	background-attachment: scroll;
}

.background-fixed {
	background-attachment: fixed;
}

.background-local {
	background-attachment: local;
}

.background-repeat {
	background-repeat: repeat;
}

.background-repeat-x {
	background-repeat: repeat-x;
}

.background-repeat-y {
	background-repeat: repeat-y;
}

.background-no-repeat {
	background-repeat: no-repeat;
}

.background-contain {
	background-size: contain;
}

.background-cover {
	background-size: cover;
}

.background-none {
	background: none;
}

.background-inherit {
	background: inherit;
}

.background-primary {
	background-color: var(--primary-color);
}

.background-highlight {
	background-color: var(--highlight-color);
}

.background-alt {
	background-color: var(--alt-color);
}

.background-accent {
	background-color: var(--accent-color);
}

.background-compliment {
	background-color: var(--compliment-color);
}

.blend-mode-normal {
	background-blend-mode: normal;
}

.blend-mode-multiply {
	background-blend-mode: multiply;
}

.blend-mode-screen {
	background-blend-mode: screen;
}

.blend-mode-overlay {
	background-blend-mode: overlay;
}

.blend-mode-darken {
	background-blend-mode: darken;
}

.blend-mode-lighten {
	background-blend-mode: lighten;
}

.blend-mode-dodge {
	background-blend-mode: color-dodge;
}

.blend-mode-burn {
	background-blend-mode: color-burn;
}

.blend-mode-hard {
	background-blend-mode: hard-light;
}

.blend-mode-soft {
	background-blend-mode: soft-light;
}

.blend-mode-difference {
	background-blend-mode: difference;
}

.blend-mode-exclusion {
	background-blend-mode: exclusion;
}

.blend-mode-hue {
	background-blend-mode: hue;
}

.blend-mode-saturation {
	background-blend-mode: saturation;
}

.blend-mode-color {
	background-blend-mode: color;
}

.blend-mode-luminosity {
	background-blend-mode: luminosity;
}

/*=================== Font rules =================================*/
.font-main {
	font-family: var(--main-font);
}

.font-article {
	font-family: var(--article-font);
}

.font-title {
	font-family: var(--title-font);
}

.small {
	font-size: 0.75em;
}

.smaller {
	font-size: 0.5em;
}

.big {
	font-size: 2em;
}

.bigger {
	font-size: 3em;
}

/*=================== Border rules =================================*/
.border-width-1 {
	border-width: 1px;
}

.border-width-2 {
	border-width: 2px;
}

.border-width-3 {
	border-width: 3px;
}

.border-width-4 {
	border-width: 4px;
}

.border-solid {
	border-style: solid;
}

.border-hidden {
	border-style: hidden;
}

.border-double {
	border-style: double;
}

.border-dotted {
	border-style: dotted;
}

.border-dashed {
	border-style: dashed;
}

.border-inset {
	border-style: inset;
}

.border-outset {
	border-style: outset;
}

.border-grooved {
	border-style: groove;
}

.border-ridge {
	border-style: ridge;
}

.border-color-current {
	border-color: currentColor;
}

/*============================ Box-sizing =================================*/
.border-box {
	box-sizing: border-box;
}

.content-box {
	box-sizing: content-box;
}

/*========================= Scroll Behavior =================================*/
.scroll-auto {
	scroll-behavior: auto;
}

.scroll-smooth {
	scroll-behavior: smooth;
}

.scroll-snap, .scroll-snap-mandatory {
	-webkit-scroll-snap-type: mandatory;
	scroll-snap-type: mandatory;
}

.scroll-snap-proximity {
	-webkit-scroll-snap-type: proximity;
	scroll-snap-type: proximity;
}

.scroll-snap-vertical {
	-webkit-scroll-snap-points-y: repeat(100vh);
	scroll-snap-points-y: repeat(100vh);
}

.scroll-snap-horizontal {
	-webkit-scroll-snap-points-x: repeat(100vw);
	scroll-snap-points-x: repeat(100vw);
}


/*============================= Float rules =======================*/
.left {
	float: left;
}

.right {
	float: right;
}

.float-none {
	float: none;
}

.clear-left {
	clear: left;
}

.clear-right {
	clear: right;
}

.clear-both {
	clear: both;
}

/*=========================== Position rules =============================*/

.fixed {
	position: fixed;
}

.relative {
	position: relative;
}

.absolute {
	position: absolute;
}

.sticky {
	position: sticky;
	margin-top: 0;
}

@media screen and (min-width: 800px) {
	.sticky-desktop {
		position: sticky;
		margin-top: 0;
	}
}

@media screen and (max-width: 800px) {
	.sticky-mobile {
		position: sticky;
		margin-top: 0;
	}
}

.z-0 {
	z-index: 0;
}

.z-1 {
	z-index: 1;
}

.z-2 {
	z-index: 2;
}

.z-3 {
	z-index: 3;
}

.z-4 {
	z-index: 4;
}

.top {
	top: 0;
}

.bottom {
	bottom: 0;
}

.left {
	left: 0;
}
/* ... */

